traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: ')' expected but ';' found.
def posFinal(a:Boolean;b:Boolean):Boolean ={
                      ^Snake:1: error: ';' expected but ')' found.
def posFinal(a:Boolean;b:Boolean):Boolean ={
                                ^